--- a/style.css
+++ b/style.css
@@ -577,13 +577,13 @@ a[data-lightbox]:hover img {
 }
 
 .lightbox-caption {
-    padding: 20px;
+    
     color: #FFF;
     background: rgba(0, 0, 0, .5);
-    position: absolute;
-    left: 15px;
-    right: 15px;
-    bottom: 5px;
+    position: relative;
+    text-align: center;
+    text-overflow: hidden;
+    margin:5px, 0px;
 }
 
 .close-lightbox {
@@ -593,11 +593,11 @@ a[data-lightbox]:hover img {
     top: 20px;
     right: 20px;
     z-index: 20;
-    background: rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, .7);
     border: none;
     line-height: 30px;
     padding: 0 9px 5px;
-    opacity: 0.3;
+    opacity: 0.8;
 }
 
 .close-lightbox:hover,
@@ -610,18 +610,19 @@ a[data-lightbox]:hover img {
 .next-lightbox,
 .prev-lightbox {
     font-size: 20px;
-    color: rgba(255, 255, 255, .9);
-    background: rgba(0, 0, 0, .5);
+    color: #FFF;
+    background: rgba(0, 0, 0, .7);
     transition: all .2s ease-in-out;
     position: absolute;
     top: 45%;
     z-index: 1;
-    opacity: 0.4;
+    opacity: 0.8;
 }
 
 .next-lightbox {
     padding: 6px 8px 1px 13px;
     right: 25px;
+    
 }
 
 .prev-lightbox {
@@ -629,8 +630,18 @@ a[data-lightbox]:hover img {
     left: 25px;
 }
 
+.fa-chevron-right{
+    color: #FFF;
+}
+.fa-chevron-left{
+    color: #FFF;
+}
+.fa-chevron-up{
+    color: #FFF;
+}
+
 .snapshot-lb .modal-body {
-    padding-bottom: 45px;
+    padding-bottom: 0px;
 }
 
 .snapshot-lb .lightbox-caption {
@@ -677,7 +688,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 16px;
 }
 
 .tight-width-whitespace {
@@ -822,7 +833,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.jpg");
 }
 
 @media (max-width: 1024px) {
@@ -998,9 +1009,9 @@ h4 {
     .a-block {
         padding: 0 10px;
     }
-    .btn-dwn {
+    /*.btn-dwn {
         display: none;
-    }
+    }*/
     .voffset {
         margin-top: 5px;
     }
@@ -1040,3 +1051,4 @@ h4 {
         text-align: center;
     }
 }
+
