--- a/style.css
+++ b/style.css
@@ -514,7 +514,7 @@ button {
     width: 40px;
     height: 40px;
     position: fixed;
-    bottom: 20px;
+    bottom: 40px;
     right: 20px;
     opacity: 0;
     z-index: 500;
@@ -789,9 +789,21 @@ h4 {
     color: #F3976C!important;
 }
 
+.ltc-black,
+.icon-md{
+    color: black!important;
+
+}
+
+.icon-md:hover{
+    color: #FFFFFF!important;
+
+}
+
+
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: Black!important;
 }
 
 .btn-atomic-tangerine:hover {
@@ -1052,3 +1064,8 @@ h4 {
     }
 }
 
+iframe{
+    width:400px;
+     height:300px;
+     border:0px;
+}
